--- a/css/styles.css
+++ b/css/styles.css
@@ -254,6 +254,25 @@ body {
   color: var(--title-color);
   margin-bottom: 50px;
 }
+.work-item {
+  position: relative;
+}
+.work-text {
+  position: absolute;
+  bottom: 0;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  width: 100%;
+
+  color: #ffffff;
+  background-color: rgba(47, 48, 58, 0.8);
+}
 /* ----------team----------*/
 
 .team {
@@ -583,8 +602,6 @@ body {
   width: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-}
-.modal-icon {
   display: flex;
   align-items: center;
   justify-content: center;
