--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,7 @@ body {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .current::after {
   content: "";
@@ -144,6 +145,7 @@ body {
   color: #757575;
   display: flex;
   align-items: center;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-mail:hover,
@@ -339,6 +341,8 @@ body {
   align-items: center;
   justify-content: center;
   color: #afb1b8;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-soc-icon {
   fill: currentColor;
@@ -376,6 +380,8 @@ body {
 
   border: 1px solid #afb1b8;
   border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-icon {
   fill: currentColor;
@@ -424,6 +430,7 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .futer-mail:hover,
 .futer-mail:focus {
@@ -461,6 +468,7 @@ body {
   align-items: center;
   justify-content: center;
   color: #ffffff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-soc-icon {
   fill: currentColor;
@@ -496,6 +504,9 @@ body {
   padding: 6px 22px;
   border: none;
   display: inline-block;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filtre-btn:hover,
@@ -503,6 +514,11 @@ body {
   background-color: var(--accent-color);
   color: #ffffff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.filtre-list .current {
+  background-color: var(--accent-color);
+  color: #ffffff;
 }
 /* ----проект---- */
 
@@ -518,6 +534,7 @@ body {
   margin-top: var(--projegt-list-gap);
   margin-left: var(--projegt-list-gap);
 }
+
 .project-wrap {
   position: relative;
   overflow: hidden;
@@ -542,11 +559,6 @@ body {
   transform: translateY(0);
 }
 
-.project-link:focus,
-.project-link:hover {
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
 .project-card {
   padding: 20px 24px;
   border-right: 1px solid #eeeeee;
@@ -568,9 +580,13 @@ body {
   letter-spacing: 0.03em;
   color: #757575;
 }
-.filtre-list .current {
-  background-color: var(--accent-color);
-  color: #ffffff;
+.project-link {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.project-link:focus,
+.project-link:hover {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 /* ----модальное окно---- */
@@ -580,7 +596,7 @@ body {
   background-color: rgba(0, 0, 0, 0.2);
   position: fixed;
   top: 0;
-  transition: opacity 250ms, visibility 250ms;
+  transition: opacity 250ms, visibility 250ms, cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
   position: absolute;
@@ -605,6 +621,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #ffffff;
 }
 .is-hidden {
   opacity: 0;
